Fixed filter on small screens

--- a/src/components/QuestionGroup/styled.module.scss
+++ b/src/components/QuestionGroup/styled.module.scss
@@ -39,3 +39,9 @@
     padding: 0;
     margin: 0;
 }
+
+@media (max-width: 35rem) {
+    .form {
+        grid-template-columns: 1fr;
+    }
+}
